--- a/clock.html
+++ b/clock.html
@@ -1,69 +1,209 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Круглые часы с числами</title>
-<style>
-#clockContainer {
-    position: relative;
-    width: 200px;
-    height: 200px;
-    background-color: #f0f0f0;
-    border-radius: 50%;
-    border: 2px solid #333;
-}
+    <title>Часы</title>
+    <style>
+        #clockContainer {
+            position: relative;
+            width: 400px; 
+            height: 300px; 
+            background-color: #fff;
+            border: none; 
+            margin: 50px auto; 
+        }
 
-#hour, #minute, #second {
-    position: absolute;
-    background: black;
-    transform-origin: bottom;
-    border-radius: 5px;
-}
+        #innerFrame { 
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 360px; 
+            height: 260px; 
+            margin-top: -130px;
+            margin-left: -180px;
+            border: 4px solid black;
+            border-radius: 50%;
+        }
 
-#hour {
-    width: 6px;
-    height: 50px;
-    top: 50px;
-    left: 97px;
-    opacity: 0.8;
-}
+        #clockFace {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 190px; 
+            height: 190px; 
+            margin-top: -95px;
+            margin-left: -95px;
+            border-radius: 50%;
+            border: 4px solid black;
+        }
 
-#minute {
-    width: 4px;
-    height: 70px;
-    top: 30px;
-    left: 98px;
-    opacity: 0.8;
-}
+        .minute-marker {
+            position: absolute;
+            width: 1px;
+            height: 5px; 
+            background-color: black;
+            top: 0%;
+            left: 50%;
+            transform-origin: center 95px; 
+        }
 
-#second {
-    width: 2px;
-    height: 90px;
-    top: 10px;
-    left: 99px;
-    background-color: rgb(255, 0, 221);
-}
+        .hour-marker {
+            height: 10px;  
+            width: 1px; 
+            transform-origin: center 95px; 
+            background-color: rgb(0, 0, 0);
+        }
 
-.number {
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    text-align: center;
-    font-size: 12px;
-    color: #333;
-    font-family: Arial, sans-serif;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); 
-}
-  </style>
+        .hand {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform-origin: bottom center;
+            background-color: black;
+            border-radius: 8px;
+        }
+
+        #hourHand {
+            width: 4px;
+            height: 40px;
+            margin-left: -2px;
+            margin-bottom: -5px;
+
+        }
+
+        #minuteHand {
+            width: 3px;
+            height: 60px;
+            margin-left: -1.5px;
+            margin-bottom: -5px;
+        }
+
+        #secondHand {
+            width: 1px;
+            height: 75px;
+            margin-left: -0.5px;
+            margin-bottom: -5px;
+            background-color: red;
+        }
+
+
+        #dateYear {
+            font-family: 'Trebuchet MS';
+            position: absolute;
+            top: 46%; 
+            left: 3%;
+            font-size: 17px; 
+        }
+
+        #dayMonth {
+            font-family: 'Trebuchet MS';
+            position: absolute;
+            top: 46%; 
+            right: 3%;
+            font-size: 17px; 
+        }
+
+        #supports {
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            justify-content: space-around;
+            width: 85%;
+            margin-bottom: 1px;
+        }
+
+        .support {
+            width: 25px; 
+            height: 25px;
+            border-radius: 50%;
+            background-color: rgb(97, 192, 50);
+            border: 3px solid black;
+        }
+        .numeral {
+            position: absolute;
+            font-size: 12px;
+            color: black;
+            text-align: center;
+        }
+
+    </style>
 </head>
 <body>
 
-  <div id="clockContainer">
-    <div id="hour"></div>
-    <div id="minute"></div>
-    <div id="second"></div>
-  </div>
+<div id="clockContainer">
+    <div id="outerFrame">
+        <div id="innerFrame">
+            <div id="dateYear">2024</div>
+            <div id="dayMonth">17.10</div>
+        </div>
+    </div>
+    <div id="clockFace">
+        <div class="numeral" style="top: -11%; left: 50%; transform: translateX(-50%);">XII</div>
+        <div class="numeral" style="top: 50%; right: -11%; transform: translateY(-50%);">III</div>
+        <div class="numeral" style="bottom: -11%; left: 50%; transform: translateX(-50%);">VI</div>
+        <div class="numeral" style="top: 50%; left: -11%; transform: translateY(-50%);">IX</div>
 
-  <script src="clock.js"></script>
+        <div class="numeral" style="top: -5%; right: 22%;">I</div>
+        <div class="numeral" style="top: -6%; left: 22%;">XI</div>
+        <div class="numeral" style="bottom: -5%; right: 22%;">V</div>
+        <div class="numeral" style="bottom: -6%; left: 22%;">VII</div>
 
+        <div class="numeral" style="top: 13%; right: -3%;">II</div>
+        <div class="numeral" style="top: 13%; left: -3%;">X</div>
+        <div class="numeral" style="bottom: 13%; right: -3%;">IV</div>
+        <div class="numeral" style="bottom: 13%; left: -3%;">VIII</div>
+
+        <div class="center-circle"></div>
+        <div class="center-dot"></div>
+    </div>
+    <div id="hourHand" class="hand"></div>
+    <div id="minuteHand" class="hand"></div>
+    <div id="secondHand" class="hand"></div>
+    <div id="supports">
+        <div class="support"></div>
+        <div class="support"></div>
+    </div>
+</div>
+
+<script>
+
+const clockFace = document.getElementById('clockFace');
+const hourHand = document.getElementById("hourHand");
+const minuteHand = document.getElementById("minuteHand");
+const secondHand = document.getElementById("secondHand");
+
+for (let i = 0; i < 60; i++) {
+    const marker = document.createElement('div');
+    marker.classList.add('minute-marker');
+    marker.style.transform = `rotate(${i * 6}deg)`;
+    clockFace.appendChild(marker);
+    if (i % 5 === 0) {
+            marker.classList.add('hour-marker');
+        }
+
+        marker.style.transform = `rotate(${i * 6}deg)`;
+        clockFace.appendChild(marker);
+}
+
+function updateClock() {
+    const now = new Date();
+    const hours = now.getHours();
+    const minutes = now.getMinutes();
+    const seconds = now.getSeconds();
+
+    const hourRotation = (hours % 12 + minutes / 60) * 30;
+    const minuteRotation = (minutes + seconds / 60) * 6;
+    const secondRotation = seconds * 6;
+
+    hourHand.style.transform = `translate(-50%, -100%) rotate(${hourRotation}deg)`;
+    minuteHand.style.transform = `translate(-50%, -100%) rotate(${minuteRotation}deg)`;
+    secondHand.style.transform = `translate(-50%, -100%) rotate(${secondRotation}deg)`;
+}
+
+setInterval(updateClock, 1000);
+updateClock();
+
+</script>
 </body>
 </html>
